-added the forms.py - class for getting the category in the item list was created - updated other forms
